--- a/Projects/RTS.html
+++ b/Projects/RTS.html
@@ -91,7 +91,7 @@ http://www.tooplate.com/view/2082-pure-mix
 <div class="wrapper">
    <div class="text-box">
       <h2>About RTS</h2>
-      <p>"RTS" is as the title says, a real time stragety game. In this game there are 2 teams, which both have a base buidling (the nexus), which they need to protect from the other team. players can build barracks to train troops to attack the other team. there are also defence towers which the player can build to defend itself from other troops. the team that manages to destroy the other team's nexus, wins the game!<br></p>
+      <p>"RTS" is as the title says, a real time stragety game. In this game there are 2 teams, which both have a base buidling (the nexus), which they need to protect from the other team. players can build barracks to train troops to attack the other team. there are also defence towers which the player can build to defend itself from other troops. Troops can also be used to defend the base against attacking troops from the other team. the team that manages to destroy the other team's nexus, wins the game!<br></p>
       <h2>About Project</h2>
       <p>This project is made by a bigger group of students (17 students) from the Media Collage Amsterdam and Grafisch Lyceum Utrecht. In this project students would learn more about how to work in a smaller team (yet bigger than the normal teams at school) using scrum. We also used Unreal Engine instead of Unity, which we normally use in school. I was one of the developers on this project and was mainly responsible for the barracks and the spawning of troops. The project was about 10 weeks long</p>
    </div>
@@ -102,10 +102,10 @@ http://www.tooplate.com/view/2082-pure-mix
 
 <div class="code">
    <div class="text-box">
-      <h2>System</h2>
-      <p><br></p>
-      <h2>About Project</h2>
-      <p>This is an older school project. The goal of the project was to build a simple 3D or 2D night racer. The project was about 6 weeks long and our team consisted of 4 people (2 devs and 2 artists). As a dev on this project, I was mainly responible for the steering mechanic and the power ups.</p>
+      <h2>barracks</h2>
+      <p>In this project, I was mainly focussed on the functionallity of the barracks. The barracks is used to train troop, wich can be used to attacks the other team, or to defend your own base against other troops. The barracks are able to train multiple different troops. When you want to train multiple troops, you can put them in a queue. the troops waiting in this queue, will be trained after the currently training troop is finished. when you have multiple barracks within the team, the training time for the troops will be shorter.<br></p>
+      <h2>functionallity</h2>
+      <p></p>
    </div>
    <div>
       <img src>
