--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -153,6 +153,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <h2>About Project</h2>
       <p>This was a 6 week long school project. The goal of this project was to make a complete game and then release it on Itch.io. The development time for the game itself was 4 weeks (12 days) plus 2 weeks (6 days) time for polishment. our team consisted of 4 artists and 1 developer (wich is me)</p>
       <p>Play the game for yourself at <a href="https://starfruitthegame.itch.io/starfruit" target="_blank">Itch.io</a></p>
+      <p>View project at <a href="" target="_blank">Github</a></p>
    </div>
    <div>
       <video id="gamevideo" controls src="Videos/Starfruit.mp4"><video>
@@ -178,7 +179,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <p></p>
    </div>
    <div>
-      <img src="">
+      <img src="images/Code/Client.PNG">
    </div>
 </div>
 
