--- a/Projects/BonAppMobile.html
+++ b/Projects/BonAppMobile.html
@@ -93,7 +93,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <h2>About BonAppMobile</h2>
       <p>BonAppMobile is a VR game where you're driving through different small villages in your pizza van, where you make... pizza. The driving happens automaticly. the player only focusses on making the pizza, steering by putting ingredients on the weel and delivering the pizza by throwing the pizza to the houses like a frizbee. <br></p>
       <h2>About Project</h2>
-      <p>This is a VR project made by a bigger group of students (17 students) from the Grafisch Lyceum Utrecht and Media Collage Amsterdam. The goal of the project was to learn how to work in a smaller team (yet bigger than the teams we normally have at school) using scrum. We also learned Unreal Engine instead of using unity like we normally do at school. I was one of the developers on this project and was mainly focused on the oven and baking pizza. The project was about 10 weeks long</p>
+      <p>This is a VR project made by a bigger group of students (17 students) from the Grafisch Lyceum Utrecht and Media Collage Amsterdam. The goal of the project was to learn how to work in a smaller team (yet bigger than the teams we normally have at school) using scrum. We also learned Unreal Engine instead of using unity like we normally do at school. I was one of the developers on this project and was mainly focused on the oven and baking pizza. I also did some mesurements at the start of the project with someone else so the van would't be to small, nor to big.  The project was about 10 weeks long</p>
    </div>
    <div>
       <img id="gameImage" src="images/pizza.png">
@@ -102,10 +102,10 @@ http://www.tooplate.com/view/2082-pure-mix
 
 <div class="code">
    <div class="text-box">
-      <h2>System</h2>
-      <p>At the start of this project I had to think about how I was going to build the system. In the game players have to be able to pour different ingredients into the couldron, pour that into a flask and serve it to the client. I had to think of a way where I don't have to make all type of refrences to objects etc because that would get messy pretty fast. Eventually I desided to use enums. All ingredients and decorations have thair own ingredienttype wich will be put into the list in the couldron and flask. this way I don't have to make refrences and I can easily compare the flask list with the client's order list to look of the order is made correclty.<br></p>
-      <h2>About Project</h2>
-      <p>This is an older school project. The goal of the project was to build a simple 3D or 2D night racer. The project was about 6 weeks long and our team consisted of 4 people (2 devs and 2 artists). As a dev on this project, I was mainly responible for the steering mechanic and the power ups.</p>
+      <h2>Oven</h2>
+      <p><br></p>
+      <h2>Van mesurements</h2>
+      <p></p>
    </div>
    <div>
       <img src>
