--- a/index.html
+++ b/index.html
@@ -217,35 +217,19 @@
             </li>           
           </ul>
         </div>
-        <!-- <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
+        <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
           <h2 class="fw-normal">Experience</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
-              <div class="title">2017 - Current</div>
+              <div class="title">2024 - 2024</div>
               <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
-              </div>
-            </li>
-            <li>
-              <div class="title">2014</div>
-              <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
-              </div>
-            </li>
-            <li>
-              <div class="title">2011</div>
-              <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                <h5>Programmer internship</h5>
+                <small class="fg-theme">LaserMaxx</small>
+                <p></p>
               </div>
             </li>
           </ul>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
