--- a/Projects/RandomMaze.html
+++ b/Projects/RandomMaze.html
@@ -92,6 +92,7 @@ http://www.tooplate.com/view/2082-pure-mix
    <div class="text-box">
       <h2>about project</h2>
       <p>For an assesment, I had to make a perfect maze generator using a algorithm. A perfect maze is a maze where you would be able to reach every place, has no loops, and has only one correct way to the exit. in this "game" you can create mazes of 10x10 to 250x250 big. you can also watch how the maze is generated if you want<br></p>
+      <p>View project at <a href="https://github.com/Gqblin/RandomMazeGenerator" target="_blank">Github</a></p>
    </div>
    <div>
       <img id="gameImage" src="">
