--- a/Projects/RatRace.html
+++ b/Projects/RatRace.html
@@ -94,7 +94,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <p>RatRace is a simple, but fun 2D racing game where you play as a rat.. in a box... <br></p>
       <h2>About Project</h2>
       <p>This is an older school project. The goal of the project was to build a simple 3D or 2D night racer. The project was about 6 weeks long and our team consisted of 4 people (2 devs and 2 artists). As a dev on this project, I was mainly responible for the steering mechanic and the power ups.</p>
-   </div>
+      <p>View project at <a href="https://github.com/Gqblin/RatRace" target="_blank">Github</a></p>
    <div>
       <img id="gamevideo" src="images/Rat.png">
    </div>
@@ -103,7 +103,7 @@ http://www.tooplate.com/view/2082-pure-mix
 <div class="code">
    <div class="text-box">
       <h2>System</h2>
-      <p>At the start of this project I had to think about how I was going to build the system. In the game players have to be able to pour different ingredients into the couldron, pour that into a flask and serve it to the client. I had to think of a way where I don't have to make all type of refrences to objects etc because that would get messy pretty fast. Eventually I desided to use enums. All ingredients and decorations have thair own ingredienttype wich will be put into the list in the couldron and flask. this way I don't have to make refrences and I can easily compare the flask list with the client's order list to look of the order is made correclty.<br></p>
+      <p><br></p>
       <h2>About Project</h2>
       <p>This is an older school project. The goal of the project was to build a simple 3D or 2D night racer. The project was about 6 weeks long and our team consisted of 4 people (2 devs and 2 artists). As a dev on this project, I was mainly responible for the steering mechanic and the power ups.</p>
    </div>
