--- a/Projects/TowerDefence3D.html
+++ b/Projects/TowerDefence3D.html
@@ -94,6 +94,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <p>Tower Defence 3D is not the devenitive name of the game. The game is a tower defence game with a twist. Towers will deal different type of damage and entities will have different types of immunities. there will also be a PVP mode where 2 player have to send troops to the other team's track in order to destroy their tower.<br></p>
       <h2>About Project</h2>
       <p>I started this project just for fun and because i thought that tower defence is a good game to learn coding. In tower defence you need to make al kind of stuff, like: pathfinding, targeting, health system, build system and more.</p>
+      <p>View project at <a href="https://github.com/Gqblin/TowerDefence3D" target="_blank">Github</a></p>
    </div>
    <div>
       <img id="gamevideo" src="images/Tower.png">
