--- a/Projects/TwinStick.html
+++ b/Projects/TwinStick.html
@@ -94,6 +94,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <p>TwinStick is a game where you play as a wizard. It was a small school project from my first year so there isn't really a goal. You can kill all the enemies and find all the unique wands that are spread over the map. All wands have their own attacks wich all cost mana (which you automaticly regain after not using mana for a while).<br></p>
       <h2>About Project</h2>
       <p>This was the first "big" school project at the end of my first year. The project was to make a TwinStick game and apparently we didn't bother to give it a name back then.. The project was about 8 weeks long for what I remember and our team consisted of 4 people (2 devs and 2 artists). As one of the devs I was monstly reponsible for the skill point system, wands and the lot of cheatcodes..</p>
+      <p>View project at <a href="https://github.com/Gqblin/TwinStick" target="_blank">Github</a></p>
    </div>
    <div>
       <img id="gamevideo" src="images/skull.PNG">
@@ -102,13 +103,15 @@ http://www.tooplate.com/view/2082-pure-mix
 
 <div class="code">
    <div class="text-box">
-      <h2>System</h2>
-      <p>At the start of this project I had to think about how I was going to build the system. In the game players have to be able to pour different ingredients into the couldron, pour that into a flask and serve it to the client. I had to think of a way where I don't have to make all type of refrences to objects etc because that would get messy pretty fast. Eventually I desided to use enums. All ingredients and decorations have thair own ingredienttype wich will be put into the list in the couldron and flask. this way I don't have to make refrences and I can easily compare the flask list with the client's order list to look of the order is made correclty.<br></p>
-      <h2>About Project</h2>
-      <p>This is an older school project. The goal of the project was to build a simple 3D or 2D night racer. The project was about 6 weeks long and our team consisted of 4 people (2 devs and 2 artists). As a dev on this project, I was mainly responible for the steering mechanic and the power ups.</p>
+      <h2>Level System</h2>
+      <p>To make our twinstick game a bit more interesting, and give you a bit more of a prograsive feel, we've added a level system. Every enemy the player kills, gives a bit of xp. When the playr has enough xp, he levels up, and a menu pops up. Every time you level up you get 2 soulpoints, wich you can invest in either: strength, mana or health. The system is really simple. when you click the "+" on the level-up panel, a soulpoint will be added. in the code there are arrays that contain the new values or multipliers for the invested stat. The level of a stat is used as an index for these arrays to use the right value for the players level.<br></p>
+      <h2>Wand</h2>
+      <p>In the game we have miltiple wands. all of them have a basic attack (Wich most of the time, is just a basic fire/magic ball) and a special attack. The special attack on each wand is different. One wand, for example, creates a ring of magic, wich damages all enemies within. There is also a wand that heals the player, and a wand that shoots a bigger, more powerfull fireball. Each spell costs mana to cast, one spell costs more then the other, depending on how strong that spell is.</p>
    </div>
    <div>
-      <img src>
+      <img src="images/Code/LevelPanel.PNG">
+      <img src="images/Code/LevelValues.PNG">
+      <img src="images/Code/Wand.PNG">
    </div>
 </div>
 
