--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -174,7 +174,7 @@ http://www.tooplate.com/view/2082-pure-mix
    </div>
    <div class="text-box">
       <h2>Dialogue system</h2>
-      <p>In the game, after you served the same custommer multiple times and have gotten a bond with them, they will ask you for a date. For this date I had to build a dialogue system. The problem was that we didn't have that much time left for the project. So instead of making something complex, I made it in a bit simpler with coroutines, with the thought of maybe fixing it later when i would have more time. This I did so we atleast had something that worked when handing in our work.<br></p>
+      <p>In the game, after you served the same custommer multiple times and have gotten a bond with them, they will ask you for a date. For this date I had to build a dialogue system. The problem was that we didn't have that much time left for the project. So instead of making something complex, I made it a bit simpler; with coroutines, with the thought of maybe fixing it later when i would have more time. This I did so we atleast had something that worked when handing in our work.<br></p>
       <h2></h2>
       <p></p>
    </div>
