--- a/Projects/RatRace.html
+++ b/Projects/RatRace.html
@@ -98,8 +98,8 @@ http://www.tooplate.com/view/2082-pure-mix
    <div>
       <img id="gamevideo" src="images/Rat.png">
    </div>
+   </div>
 </div>
-
 <div class="code">
    <div class="text-box">
       <h2>System</h2>
