twinstick page fix

--- a/Projects/TwinStick.html
+++ b/Projects/TwinStick.html
@@ -105,12 +105,19 @@ http://www.tooplate.com/view/2082-pure-mix
    <div class="text-box">
       <h2>Level System</h2>
       <p>To make our twinstick game a bit more interesting, and give you a bit more of a prograsive feel, we've added a level system. Every enemy the player kills, gives a bit of xp. When the playr has enough xp, he levels up, and a menu pops up. Every time you level up you get 2 soulpoints, wich you can invest in either: strength, mana or health. The system is really simple. when you click the "+" on the level-up panel, a soulpoint will be added. in the code there are arrays that contain the new values or multipliers for the invested stat. The level of a stat is used as an index for these arrays to use the right value for the players level.<br></p>
-      <h2>Wand</h2>
-      <p>In the game we have miltiple wands. all of them have a basic attack (Wich most of the time, is just a basic fire/magic ball) and a special attack. The special attack on each wand is different. One wand, for example, creates a ring of magic, wich damages all enemies within. There is also a wand that heals the player, and a wand that shoots a bigger, more powerfull fireball. Each spell costs mana to cast, one spell costs more then the other, depending on how strong that spell is.</p>
    </div>
    <div>
       <img src="images/Code/LevelPanel.PNG">
       <img src="images/Code/LevelValues.PNG">
+   </div>
+</div>
+
+<div class="code">
+   <div class="text-box">
+      <h2>Wand</h2>
+      <p>In the game we have miltiple wands. all of them have a basic attack (Wich most of the time, is just a basic fire/magic ball) and a special attack. The special attack on each wand is different. One wand, for example, creates a ring of magic, wich damages all enemies within. There is also a wand that heals the player, and a wand that shoots a bigger, more powerfull fireball. Each spell costs mana to cast, one spell costs more then the other, depending on how strong that spell is.</p>
+   </div>
+   <div>
       <img src="images/Code/Wand.PNG">
    </div>
 </div>
