--- a/Projects/RTS.html
+++ b/Projects/RTS.html
@@ -105,10 +105,10 @@ http://www.tooplate.com/view/2082-pure-mix
       <h2>barracks</h2>
       <p>In this project, I was mainly focussed on the functionallity of the barracks. The barracks is used to train troop, wich can be used to attacks the other team, or to defend your own base against other troops. The barracks are able to train multiple different troops. When you want to train multiple troops, you can put them in a queue. the troops waiting in this queue, will be trained after the currently training troop is finished. when you have multiple barracks within the team, the training time for the troops will be shorter.<br></p>
       <h2>functionallity</h2>
-      <p></p>
+      <p>because we hadn't yet started with the UI, I attached each troop to a number. When you've build a barracks and pressed one of those numbers, the troop assaigned to that number will b added to the queue. In the blueprint here, I first do a check if there is still any space left in the barracks. If there is space left, the troop is added to the list and will be trained as soon as all the troops before him are done training.</p>
    </div>
    <div>
-      <img src>
+      <img src="images/Code/Barracks.PNG">
    </div>
 </div>
 
