--- a/Projects/RatRace.html
+++ b/Projects/RatRace.html
@@ -102,10 +102,10 @@ http://www.tooplate.com/view/2082-pure-mix
 </div>
 <div class="code">
    <div class="text-box">
-      <h2>System</h2>
-      <p><br></p>
       <h2>About Project</h2>
       <p>This is an older school project. The goal of the project was to build a simple 3D or 2D night racer. The project was about 6 weeks long and our team consisted of 4 people (2 devs and 2 artists). As a dev on this project, I was mainly responible for the steering mechanic and the power ups.</p>
+      <h2>Movement system</h2>
+      <p><br></p>
    </div>
    <div>
       <img src>
