--- a/index.html
+++ b/index.html
@@ -156,17 +156,17 @@
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">Game Design</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 68%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Experienced</div>
+              </div>
+            </div>
+            <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Web Development</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Experienced</div>
               </div>
-            </div>
-            <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Game Design</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Experienced</div>
-              </div>
-            </div>
+            </div>     
           </div>
         </div>
         <div class="col-md-6">
@@ -218,14 +218,14 @@
           </ul>
         </div>
         <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
-          <h2 class="fw-normal">Experience</h2>
+          <h2 class="fw-normal">Work and internships</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
               <div class="title">2024 - 2024</div>
               <div class="details">
-                <h5>Programmer internship</h5>
+                <h5>(game)Developer internship</h5>
                 <small class="fg-theme">LaserMaxx</small>
-                <p></p>
+                <p>Programmer on different projects, app testing and fixing bugs</p>
               </div>
             </li>
           </ul>
