--- a/Projects/ChristmasArena.html
+++ b/Projects/ChristmasArena.html
@@ -93,7 +93,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <h2>About Christmas Arena</h2>
       <p>In Christmas Arena you have 2 players. The goal of the player is to kill the other player, but you are also being chased by snowman which throws snawballs at you.<br></p>
       <h2>About Project</h2>
-      <p>This is an old small school project of like 2 or 3 weeks. Out team consisted of 3 developers. I was more of a support developer in this project who was there to help and fix bugs etc, so I didn't do a lot of programming, but I did make the entire map.</p>
+      <p>This is an old small school project of like 2 or 3 weeks. Out team consisted of 3 developers. In this project, I was responisble for the map. We were provided with some assets, wich we were allowed to use in the game. As for development work, I didn't do al that much, but for some trouble shooting and fixen bugs when the other devs couldn't fix them. But in the end, I did make the entire map.</p>
    </div>
    <div>
       <img id="gamevideo" src="images/ChristmasTree.PNG">
