--- a/Projects/LearningGodot.html
+++ b/Projects/LearningGodot.html
@@ -91,12 +91,24 @@ http://www.tooplate.com/view/2082-pure-mix
 <div class="wrapper">
    <div class="text-box">
       <h2>About Godot</h2>
-      <p>Godot is a free to use, open source game engine which is more and more used by (bigger) companies.<br></p>
+      <p>Godot is a free to use, open source game engine which is more and more used by (bigger) companies. Last few years it is getting much attantion because of all the updates it gets.<br></p>
       <h2>Why learning Godot?</h2>
-      <p></p>
+      <p>Because of some recent events with unity, I was looking at a different engine I could learn. Godot pretty fast catched my eye, bucause of it's simple feutures, fast loading times, and rapid updates, I thought it was a good idea to learn Godot as an extra engine. Bisides that, Godot also announched that they will expand Godot in a way that it can also be used by big corporations.</p>
    </div>
    <div>
       <img id="gamevideo" src="images/GodotLogo.png">
+   </div>
+</div>
+
+<div class="wrapper">
+   <div class="text-box">
+      <h2>Learning Godot</h2>
+      <p>Here, I will take you through my journey of learning Godot.<br></p>
+      <h2>Coming sometime soon</h2>
+      <p><br></p>
+   </div>
+   <div>
+      <img>
    </div>
 </div>
 
