--- a/Projects/RatRace.html
+++ b/Projects/RatRace.html
@@ -105,10 +105,10 @@ http://www.tooplate.com/view/2082-pure-mix
       <h2>About Project</h2>
       <p>This is an older school project. The goal of the project was to build a simple 3D or 2D night racer. The project was about 6 weeks long and our team consisted of 4 people (2 devs and 2 artists). As a dev on this project, I was mainly responible for the steering mechanic and the power ups.</p>
       <h2>Movement system</h2>
-      <p><br></p>
+      <p>One of the most impoortant features for this project, was the movement. But because we decided to make our game in 2d, instead of 3d, we had to think of some other movement system. eventually we came with the idea to make a simple movement where, when you are going one way, for example right, and you press "up", you will go slightly up with about 30 percent. In the code, it checks the x and y value and loads the correct sprite, so you are facing the right direction. than it checks if the other value is higher than zero, wich will mean that the player is also holding an other butten. When it is higher then 0, an angle is added to the movement direction, wich couses it to move a bit of an other direction.<br></p>
    </div>
    <div>
-      <img src>
+      <img src="images/Code/RatraceMovement.PNG">
    </div>
 </div>
 
