--- a/Projects/TwinStick.html
+++ b/Projects/TwinStick.html
@@ -107,7 +107,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <p>To make our twinstick game a bit more interesting, and give you a bit more of a prograsive feel, we've added a level system. Every enemy the player kills, gives a bit of xp. When the playr has enough xp, he levels up, and a menu pops up. Every time you level up you get 2 soulpoints, wich you can invest in either: strength, mana or health. The system is really simple. when you click the "+" on the level-up panel, a soulpoint will be added. in the code there are arrays that contain the new values or multipliers for the invested stat. The level of a stat is used as an index for these arrays to use the right value for the players level.<br></p>
    </div>
    <div>
-      <img id="CodeSnapped" src="images/Code/LevelPanel.PNG">
+      <img id="Screen" src="images/Code/LevelPanel.PNG">
       <img id="CodeSnapped" src="images/Code/LevelValues.PNG">
    </div>
 </div>
