--- a/Projects/BonAppMobile.html
+++ b/Projects/BonAppMobile.html
@@ -100,7 +100,7 @@ http://www.tooplate.com/view/2082-pure-mix
    </div>
 </div>
 
-<div class="code">
+<!-- <div class="code">
    <div class="text-box">
       <h2>Oven</h2>
       <p><br></p>
@@ -110,7 +110,7 @@ http://www.tooplate.com/view/2082-pure-mix
    <div>
       <img src>
    </div>
-</div>
+</div> -->
 
 <!-- Javascript 
 ================================================== -->
