more font colors changed

--- a/index.html
+++ b/index.html
@@ -329,7 +329,6 @@
         <button class="btn btn-theme-outline" data-filter=".Godot">Godot</button>
         <button class="btn btn-theme-outline" data-filter=".School">School</button>
         <button class="btn btn-theme-outline" data-filter=".Own-Projects">Own Projects</button>
-        <button class="btn btn-theme-outline" data-filter=".Small-Projects">Small Projects</button>
       </div>
 
       <div class="gridder my-3">
@@ -394,7 +393,7 @@
               <img src="../assets/img/work/MazeGenerator.PNG" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Random Maze Generator</h5>
-                <p>2D, Unity, Own Projects, Small Projects</p>
+                <p>2D, Unity, Own Projects</p>
               </div>
             </div>
           </div>
