--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Nigel van Maanen</h1>
           <h5 class="fg-theme mb-3">Game Developer</h5>
-          <p class="text-muted">Hi, I'm Nigel van Maanen. I'm a passionate Game & Software Developer with an eye for detail. I'm Experienced in Unity, Unreal Engine and I'm now also learing Godot. I'm currently studying Game Development at Grafisch Lyceum Utrecht. I'm always passionate to improve my skills and learn new things! Now also working as Chief Creative Officer (CCO) ad DIVD.Worsk.</p>
+          <p class="text-muted">Hi, I'm Nigel van Maanen. I'm a passionate Game & Software Developer with an eye for detail. I'm Experienced in Unity, Unreal Engine and I'm now also learing Godot. I'm currently studying Game Development at Grafisch Lyceum Utrecht. I'm always passionate to improve my skills and learn new things! Now also working as Chief Creative Officer (CCO) ad DIVD.Works.</p>
           <ul class="theme-list">
             <li><b>From:</b> Utrecht, Netherlands</li>
             <li><b>Lives In:</b> Utrecht, Netherlands</li>
